# oak_reflect

./: .gitignore  meson.build  meson_options.txt  notes.md
example/: example.cpp  example.gen.h  example.h  example.reflect.h  example_incl.h  meson.build
include/oak_reflect/: any.h  attribute.h  type_info.h  type_info_list.h  type_uid.h
include/oak_rtti/: type_info.h
runtime/: any.cpp  meson.build  type_info.cpp  type_info_list.cpp
tools/: gen.cpp  gen_tu.cpp  meson.build
